# Parnuan-AI-Engineer-Intern

./: .env.example  .gitignore  README.md
Assignment1/: README.md  pyproject.toml
Assignment1/data/: dataset.jsonl
Assignment1/reports/: eval_google_gemini-2.5-flash-lite.json
Assignment1/src/: eval.py  ner.py
Assignment2/: README.md  pyproject.toml
Assignment2/data/: train.jsonl
Assignment2/notebooks/: finetune.ipynb
Assignment2/reports/: eval_finetuned.json  eval_zeroshot.json
Assignment2/src/: gen_trainset.py
reports/: eval_anthropic_claude-sonnet-4.6.json  eval_openai_gpt-5-mini.json  eval_tiered.json
src/: eval.py  ner.py  tiered.py
